# Stp2Glb

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  environment.build.yml  pixi.toml
.github/workflows/: ci-build-and-release.yml  ci-build.yml  ci-occt-static-build.yml  ci-stepcode-static-build.yml
cmake/: deps_cgal.cmake  deps_ifc.cmake  deps_occ.cmake  deps_stepcode.cmake  pre_checks.cmake
files/: as1-oc-214-mini.stp  my_test.ifc
recipes/occt-static/: bld.bat  build.bat  build.sh  conda_build_config-win.yaml  recipe.yaml
recipes/stepcode-static/: build.bat  build.sh  conda_build_config-linux.yaml  conda_build_config-win.yaml  recipe.yaml
src/: config_structs.h  config_utils.cpp  config_utils.h  main.cpp
src/cadit/ifc/: ifcop.cpp  ifcop.h
src/cadit/occt/: bsplinesurf.cpp  bsplinesurf.h  colors.cpp  colors.h  convert.cpp  convert.h  custom_progress.cpp  custom_progress.h  debug.cpp  debug.h  geometry_iterator.h  gltf_writer.cpp  gltf_writer.h  helpers.cpp  helpers.h  occt_convert.cpp  occt_convert.h  step_helpers.cpp  step_helpers.h  step_to_glb.cpp  step_to_glb.h  step_to_glb_v1.cpp  step_to_glb_v1.h  step_to_glb_v2.cpp  step_to_glb_v2.h  step_tree.cpp  step_tree.h  step_writer.cpp  step_writer.h
src/cadit/stepcode/: sc_parser.cpp  sc_parser.h
src/cadit/tinygltf/: tiny.cpp  tiny.h  tinyload.h
src/geom/: Color.cpp  Color.h  GroupReference.h  Mesh.h  MeshType.h  Models.cpp  OccShape.h  geometries.cpp  geometries.h
src/helpers/: helpers.cpp  helpers.h
src/visit/: ShapeTesselator.cpp  ShapeTesselator.h  TessellateFactory.cpp  TessellateFactory.h  tess_helpers.cpp  tess_helpers.h
src/visit/manual/solids/: boxes.cpp
tests/: .gitignore  tests.cmake
